# CEngine-Template

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/Editor/: SpriteAnimationEditor.cpp  SpriteAnimationEditor.hpp
src/Game/: Game.cpp  Game.hpp
src/Game/scripts/: Player.cpp  Player.hpp  SpriteAnimation.cpp  SpriteAnimation.hpp
